--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  height: 100vh;
+  height: 100dvh;
   transition: transform 200ms cubic-bezier(.55, .75, .50, 1);
   overflow-y: auto;
   transform: translateX(0);
@@ -7,7 +7,7 @@
 }
 
 .sidebar.toggled {
-  height: calc(100vh - 50px);
+  height: calc(100dvh - 50px);
   transform: translateX(0);
   transition: transform 200ms cubic-bezier(.55, .75, .50, 1);
 }
@@ -15,6 +15,6 @@
 @media (max-width: 768px) {
   .sidebar {
     transform: translateX(-100%);
-    height: calc(100vh - var(--navbar-height));
+    height: calc(100dvh - var(--navbar-height));
   }
 }
